# GitComic

./: LICENSE  README.md
assets/: icons.txt
gitcomic/: README.md  gitcomic.py  setup.cfg
gitcomic/src/gitcomic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gitcomic/src/gitcomic_vieitesss.egg-info/: PKG-INFO  SOURCES.txt
python/: gitcomic.py
sh/: gitcomic.sh
