[metadata]
name = gitcomic
version = 0.0.1
author = Daniel Vieites
author_email = dvieitest@gmail.com
description = An app that allows you to create git commits including icons depending on the changes you have made in your repo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vieitesss/GitComic
project_urls = 
    Bug Tracker = https://github.com/vieitesss/GitComic/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
